reports working, need make some tests

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+    <%= link_to 'bills', bills_path %>
+    <%= link_to 'users', users_path %>
+    <%= link_to 'reports', reports_path %>
+    
     <%= yield %>
   </body>
 </html>
